--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "expo": "~52.0.18",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "metro": "^0.81.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-haptic-feedback": "^2.3.3"
+    "react-native-haptic-feedback": "^2.3.3",
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-symbols": "~0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
