--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "expo-symbols": "~0.2.2"
+    "expo-symbols": "~0.2.2",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
