--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-vector-icons": "^10.2.0",
     "expo-symbols": "~0.2.2",
     "@expo/vector-icons": "^14.0.2",
-    "expo-speech": "~13.0.1"
+    "expo-speech": "~13.0.1",
+    "expo-sensors": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
