--- a/package.json
+++ b/package.json
@@ -7,26 +7,31 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "expo": "~52.0.18",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
+    "expo-sensors": "~14.0.2",
+    "expo-speech": "~13.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
     "metro": "^0.81.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-svg": "15.8.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-symbols": "~0.2.2",
-    "@expo/vector-icons": "^14.0.2",
-    "expo-speech": "~13.0.1",
-    "expo-sensors": "~14.0.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.2.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^52.0.6"
   },
   "private": true
+
 }
